web-infras/parser/tests/fixtures/babel/es2015/uncategorised/224/output.txt
[SyntaxError]: Missing semicolon or line terminator. (2,5)
2| is y
 |   ^
